# pointnet-auto-encoder

./: README.md  auto_encoder_train.lua  visualize_predictions.py
lib/cpp/cpu/: CMakeLists.txt  chamfer_distance.cpp  chamfer_distance.h  max_distance.cpp  max_distance.h  smooth_l1_chamfer_distance.cpp  smooth_l1_chamfer_distance.h
lib/cpp/cpu/tests/: CMakeLists.txt  test_chamfer_distance.cpp  test_max_distance.cpp
lib/cpp/gpu/: CMakeLists.txt  chamfer_distance.cu  chamfer_distance.h  cuda_helper.h  fast_chamfer_distance.cu  fast_chamfer_distance.h  max_distance.cu  max_distance.h  smooth_l1_chamfer_distance.cu  smooth_l1_chamfer_distance.h
lib/cpp/gpu/tests/: CMakeLists.txt  test_chamfer_distance.cpp  test_fast_chamfer_distance.cpp  test_max_distance.cpp
lib/th/: ChamferDistanceCriterion.lua  CheckNaN.lua  MaxDistanceCriterion.lua  PointAutoEncoder.lua  PrintDimensions.lua  SmoothL1ChamferDistanceCriterion.lua  Utils.lua  ffi.lua  init.lua
